# mergesort-egui

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  mergesort-egui-13a97c23b6f1ec0b.js  mergesort-egui-4e75a1d22d4bfb05.js  mergesort-instructions.md  mergesort-lesson-final.md  mergesort-lesson.md  rust-toolchain  sw.js
.github/workflows/: rust.yml
assets/: sw.js
src/: app.rs  instructions.md  lib.rs  main.rs  mergesort-instructions.md  mergesort-lesson.md
