[package]
name = "mergesort-egui"
version = "0.1.0"
authors = ["Dhruv Dhamani <dhruv.dhamani@gmail.com>"]
edition = "2021"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
egui = "0.29.1"
eframe = { version = "0.29.1", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "wgpu",
    "persistence",
    "web_screen_reader",
] }
log = "0.4"

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
egui_commonmark = { version = "0.18.0", features = [
    "load-images",
    "pulldown_cmark",
    "better_syntax_highlighting",
    "document-features",
    "fetch",
    "svg",
] }
image = { version = "0.25", default-features = false, features = [
    "jpeg",
    "png",
    "webp",
] }
serde_json = "1.0.132"
wasm-bindgen-futures = "0.4"
reqwasm = "0.5.0"
lazy_static = "1.5.0"


# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"           # to access the DOM (to hide the loading text)

[profile.release]
opt-level = 2       # fast and small wasm
strip = "debuginfo"
lto = true

[profile.native-release]
inherits = "release"
lto = true

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
